--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,14 +8,7 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: configure
-      run: meson setup build
-    - name: cd
-      run: cd build
-    - name: build
-      run: ninja
+      name: Meson Build
+  # You may pin to the exact commit or the version.
+  # uses: BSFishy/meson-build@656b2a360964b249ac82905a52018921e01d875b
+      uses: BSFishy/meson-build@v1.0.3
