--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,7 +8,16 @@ on:
 
 jobs:
   build:
-      name: Meson Build
-  # You may pin to the exact commit or the version.
-  # uses: BSFishy/meson-build@656b2a360964b249ac82905a52018921e01d875b
-      uses: BSFishy/meson-build@v1.0.3
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          set-safe-directory: true
+      - name: Install Dependencies
+        run: |
+          apt install -y meson ninja
+      - run: |
+          meson setup build
+          cd build
+          ninja
