--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt update -y
-          sudo apt install -y meson ninja-build
+          sudo apt install -y meson ninja-build glslang vulkan libvulkan-dev vulkan-tools
       - run: |
           meson setup build
           cd build
