add github token

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,3 +25,5 @@ jobs:
       - run: |
           export REL_NAME="release-$(date +%Y%m%d%H%M%S)"
           gh release create $REL_NAME -t "${REL_NAME}" --generate-notes build/robbit
+        env:
+          GH_TOKEN: ${{ github.token }}
